// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransitionWrapDemo keepOnExit: visible=false 1`] = `
<body>
  <div>
    <div
      class="eui-wingblank TransitionWrap eui-wingblank-m"
    >
      <button
        class="eui-button eui-button-l eui-button-customize eui-button-ghost"
        role="button"
      >
        keepOnExit = false
      </button>
      <div
        class="eui-whitespace eui-whitespace-m"
      />
      <button
        class="eui-button eui-button-l eui-button-customize eui-button-ghost"
        role="button"
      >
        keepOnExit = true
      </button>
      <h1
        class="world world-exit-done"
      >
        world
      </h1>
    </div>
  </div>
</body>
`;

exports[`TransitionWrapDemo keepOnExit: visible=true 1`] = `
<body>
  <div>
    <div
      class="eui-wingblank TransitionWrap eui-wingblank-m"
    >
      <button
        class="eui-button eui-button-l eui-button-customize eui-button-ghost"
        role="button"
      >
        keepOnExit = false
      </button>
      <div
        class="eui-whitespace eui-whitespace-m"
      />
      <button
        class="eui-button eui-button-l eui-button-customize eui-button-ghost"
        role="button"
      >
        keepOnExit = true
      </button>
      <h1
        class="world world-entry-done"
      >
        world
      </h1>
    </div>
  </div>
</body>
`;

exports[`TransitionWrapDemo unmontOnExit: visible=false 1`] = `
<body>
  <div>
    <div
      class="eui-wingblank TransitionWrap eui-wingblank-m"
    >
      <button
        class="eui-button eui-button-l eui-button-customize eui-button-ghost"
        role="button"
      >
        keepOnExit = false
      </button>
      <div
        class="eui-whitespace eui-whitespace-m"
      />
      <button
        class="eui-button eui-button-l eui-button-customize eui-button-ghost"
        role="button"
      >
        keepOnExit = true
      </button>
      <h1
        class="world world-exit-done"
      >
        world
      </h1>
    </div>
  </div>
</body>
`;

exports[`TransitionWrapDemo unmontOnExit: visible=true 1`] = `
<body>
  <div>
    <div
      class="eui-wingblank TransitionWrap eui-wingblank-m"
    >
      <button
        class="eui-button eui-button-l eui-button-customize eui-button-ghost"
        role="button"
      >
        keepOnExit = false
      </button>
      <div
        class="eui-whitespace eui-whitespace-m"
      />
      <button
        class="eui-button eui-button-l eui-button-customize eui-button-ghost"
        role="button"
      >
        keepOnExit = true
      </button>
      <h1
        class="hello hello-entry-done"
      >
        hello
      </h1>
      <h1
        class="world world-exit-done"
      >
        world
      </h1>
    </div>
  </div>
</body>
`;

exports[`renders TransitionWrap correctly 1`] = `
<div>
  <div
    class="eui-wingblank TransitionWrap eui-wingblank-m"
  >
    <button
      class="eui-button eui-button-l eui-button-customize eui-button-ghost"
      role="button"
    >
      keepOnExit = false
    </button>
    <div
      class="eui-whitespace eui-whitespace-m"
    />
    <button
      class="eui-button eui-button-l eui-button-customize eui-button-ghost"
      role="button"
    >
      keepOnExit = true
    </button>
    <h1
      class="world world-exit-done"
    >
      world
    </h1>
  </div>
</div>
`;
